@@ -1,0 +1,9 @@
+## Process this file with automake to produce Makefile.in
+
+Migrationsdir = @DATADIR@/ebox-sysinfo/migration
+
+nobase_Migrations_SCRIPTS = 0001_add_total_disk_usage.pl
+
+EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
+
+MAINTAINERCLEANFILES = Makefile.in
