@@ -5,7 +5,7 @@ CREATE TABLE mail_message_report (
        domain_from VARCHAR(255),
        user_to VARCHAR(255),
        domain_to VARCHAR(255),
-       event VARCHAR(20),
+       event VARCHAR(255),
        message_type VARCHAR(10),
        status VARCHAR(25),
        bytes BIGINT,
